# neuroimaging-tumor-detector

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BACKEND_STATUS.md  CHANGES.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  main.py  overview.txt  pyproject.toml  render.yaml  requirements-prod.txt  requirements.txt  test_training.py
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  QUICK_START.md  SECURITY.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  utils.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/Export/: ExportButtons.tsx
frontend/src/components/History/: HistoryPanel.tsx
frontend/src/components/Layout/: Footer.tsx  (+1 more)
frontend/src/hooks/: useFileSelection.ts  usePrediction.ts
frontend/src/styles/: globals.css  variables.css
notebooks/: 01_explore_and_clean.ipynb  02_model_training.ipynb  03_eval_cam.ipynb
notesbooks/: 01_explore_and_clean.ipynb
results/: test_evaluation.txt
scripts/: download_model.py  setup-env.sh
src/: auth.py  compare.py  config.py  data.py  database.py  evaluate.py  experiment.py  gradcam.py  logger.py  model.py  model_loader.py  models_db.py  predict.py  rate_limit.py  train.py  validation.py  visualize.py
static/: app.js  index.html  style.css
static/assets/: index-Bx3kYq3b.js  index-Hi34cMAU.css  index.es-CAgZfyCQ.js
tests/: conftest.py  test_aggregation.py  test_api.py  test_data.py  test_gradcam.py  test_model.py  test_predict.py
(+8 files in other folders)
