[project]
name = "neuroimaging-tumor-detector"
version = "1.0.0"
description = "Brain tumor classification from MRI scans using deep learning"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require the full model checkpoint",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
